[gd_scene load_steps=12 format=3 uid="uid://c2hhqm873e4x3"]

[ext_resource type="Script" uid="uid://bhhntyyuu5a2w" path="res://scenes/MainScreenScript.gd" id="1_7fvvs"]
[ext_resource type="AudioStream" uid="uid://cxksud3xmf2qr" path="res://assets/sounds/menu/darkness_piano.mp3" id="1_w87pm"]
[ext_resource type="Texture2D" uid="uid://c5rtiyv68yppj" path="res://assets/logo/logo.png" id="2_a46j4"]
[ext_resource type="Theme" uid="uid://ctrfqu5b5msha" path="res://assets/styles/ButtonsStyle.tres" id="2_kusfh"]
[ext_resource type="AudioStream" uid="uid://15tuhkrxk0i2" path="res://assets/sounds/menu/Wood Block3.mp3" id="2_lushf"]
[ext_resource type="AudioStream" uid="uid://dorkahdlptslo" path="res://assets/sounds/menu/Wood Block1.ogg" id="3_aum10"]

[sub_resource type="GDScript" id="GDScript_w87pm"]
script/source = "extends Control

@onready var bgSound: AudioStreamPlayer = $BGSound 


func _on_ready():
	bgSound.play()
"

[sub_resource type="SystemFont" id="SystemFont_7fvvs"]
font_names = PackedStringArray("Sitka Small")
font_italic = true
font_weight = 525

[sub_resource type="SystemFont" id="SystemFont_kusfh"]
font_names = PackedStringArray("Sitka Small")
font_italic = true

[sub_resource type="SystemFont" id="SystemFont_lushf"]
font_names = PackedStringArray("Sitka Small")
font_italic = true

[sub_resource type="SystemFont" id="SystemFont_aum10"]
font_names = PackedStringArray("Sitka Small")
font_italic = true

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 4.0
offset_right = 2.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_w87pm")

[node name="Logo" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Logo" type="Sprite2D" parent="Logo"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_a46j4")

[node name="BGSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_w87pm")
volume_db = -20.0
parameters/looping = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.37
offset_top = -96.0
offset_right = 139.37
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = SubResource("SystemFont_7fvvs")
text = "Project Izanami"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -158.0
offset_right = 228.0
offset_bottom = -57.0
grow_vertical = 0
alignment = 1
script = ExtResource("1_7fvvs")

[node name="SelectSound" type="AudioStreamPlayer" parent="VBoxContainer"]
stream = ExtResource("2_lushf")

[node name="HoverSound" type="AudioStreamPlayer" parent="VBoxContainer"]
stream = ExtResource("3_aum10")

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_kusfh")
theme_override_fonts/font = SubResource("SystemFont_kusfh")
action_mode = 0
text = "New Game"
alignment = 0

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_kusfh")
theme_override_fonts/font = SubResource("SystemFont_lushf")
text = "Settings"
alignment = 0

[node name="About" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_kusfh")
theme_override_fonts/font = SubResource("SystemFont_aum10")
text = "About"
alignment = 0

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_kusfh")
theme_override_fonts/font = SubResource("SystemFont_lushf")
text = "Quit"
alignment = 0

[node name="QuitDialog" type="ConfirmationDialog" parent="VBoxContainer/Quit"]
handle_input_locally = false
title = ""
size = Vector2i(323, 100)
transient = false
exclusive = false
ok_button_text = "Yes"
dialog_text = "Are you sure you want to quit?"
dialog_hide_on_ok = false
dialog_close_on_escape = false
cancel_button_text = "No"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="tree_entered" from="." to="VBoxContainer" method="_on_main_screen_tree_entered"]
[connection signal="ready" from="BGSound" to="VBoxContainer" method="_on_bg_sound_ready"]
[connection signal="finished" from="VBoxContainer/SelectSound" to="VBoxContainer" method="_on_select_sound_finished"]
[connection signal="ready" from="VBoxContainer/HoverSound" to="VBoxContainer" method="_on_hover_sound_ready"]
[connection signal="mouse_entered" from="VBoxContainer/NewGame" to="VBoxContainer" method="_on_new_game_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/NewGame" to="VBoxContainer" method="_on_new_game_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Settings" to="VBoxContainer" method="_on_settings_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Settings" to="VBoxContainer" method="_on_settings_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/About" to="VBoxContainer" method="_on_about_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/About" to="VBoxContainer" method="_on_about_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="VBoxContainer" method="_on_quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Quit" to="VBoxContainer" method="_on_quit_pressed"]
[connection signal="confirmed" from="VBoxContainer/Quit/QuitDialog" to="VBoxContainer" method="_on_quit_dialog_confirmed"]
